# suraya

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  mk.py  plugin-manifest.json  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: oci-grafana.yml  pypi.yml  remove-oci-tag.yml
docs/: backlog.md  changelog.md  marimo.md  research.md  sandbox.md
suraya/grafana/: Dockerfile  mk.py  plugin-manifest.json  selftest.sh  test.yml
suraya/marimo/: Dockerfile  index.html
suraya/system/: compose.yaml  grafana-datasource.yml  grafana.ini  index.html  nginx.conf
